<resources>
    <string name="app_name">Praying With Dedication</string>

    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_contacts">Contact Groups</string>
    <string name="title_activity_contact_detail">Contact Detail</string>
    <string name="title_activity_prayer_request_detail">Prayer Request</string>

    <string name="tab_requests">Requests</string>
    <string name="tab_archive">Answered</string>

    <string name="menu_contact_group_edit">Edit Selected Group</string>
    <string name="menu_contact_group_delete">Delete Selected Group</string>
    <string name="menu_contact_group_add">Add New Group</string>
    <string name="menu_contact_edit">Edit Contact</string>
    <string name="menu_contact_delete">Delete Contact</string>

    <string name="btn_schedule">Schedule</string>
    <string name="btn_archive">Answered</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_ok">OK</string>
    <string name="btn_confirm">confirm</string>

    <string name="date_format">MMM dd, yyyy</string>
    <string name="required_fields">* Required Fields</string>

    <string name="add_new_prayer_request_error">Cannot add new request</string>
    <string name="edit_new_prayer_request_error">Cannot edit the request</string>

    <string name="dialog_edit_contact_title">Edit Contact</string>
    <string name="dialog_delete_item">Delete Item</string>
    <string name="dialog_add_contact_title">Add New Contact</string>
    <string name="delete_warning"><![CDATA[Are you sure you want to delete this item?<br/><br/> <b>%s</b>]]></string>
    <string name="dialog_delete_group_title">Delete Contact Group</string>
    <string name="dialog_delete_group_denied">You must have at least one contact group. You cannot delete this one.</string>
    <string name="dialog_add_contact_group_title">Add Contact Group</string>
    <string name="dialog_edit_contact_group_title">Edit Contact Group</string>

    <string name="dialog_contact_first_name_hint">First Name *</string>
    <string name="dialog_contact_last_name_hint">Last Name</string>
    <string name="dialog_contact_group_name_hint">Group Name *</string>
    <string name="dialog_contact_group_desc_hint">Group Desc</string>
    <string name="dialog_delete_contact_title">Delete Contact</string>

    <string name="dialog_prayer_list_title_add">Add Prayer List</string>
    <string name="dialog_prayer_list_title_edit">Edit Prayer List</string>
    <string name="dialog_prayer_list_title_delete">Delete Prayer Request</string>
    <string name="dialog_prayer_list_name_hint">Prayer List Name *</string>

    <string name="progress_loading">Loading&#8230;</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_sign_in_failed">Sign In Failed</string>
    <string name="login_error_required">Required</string>
    <string name="data_success_add">Value added successfully</string>
    <string name="data_value_changed">Value successfully changed</string>
    <string name="data_value_deleted">Value successfully deleted</string>
    <string name="title_activity_prayer_list">Prayer Lists</string>
    <string name="data_prayer_list_delete_denied">Cannot delete the prayer list</string>
    <string name="menu_prayer_list_add">Add Prayer List</string>
    <string name="menu_prayer_list_edit">Edit Prayer List</string>
    <string name="menu_prayer_list_delete">Delete Prayer List</string>
    <string name="btn_pray">Prayed For</string>
    <string name="btn_add">Add</string>
    <string name="dialog_prayer_list_add_request">Create a new request</string>
    <string name="dialog_prayer_list_add_request_title">Select Requests To Add To The List</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_more">More</string>
    <string name="widget_title">Prayer List</string>
    <string name="dialog_bible_passage_add">Add A New Bible Passage</string>
    <string name="dialog_bible_passage_title">Add or Select a Bible Passage</string>
    <string name="dialog_search_verse">Verse(s)</string>
    <string name="dialog_search_and_save_bible_passage_title">Bible Passage Finder</string>
    <string name="btn_find">Find</string>
    <string name="spinner_books_hint">Bible Books</string>
    <string name="spinner_contacts_hint">Select a contact</string>
    <string name="contact">Contact</string>
    <string name="item_selected_acc">Item Selected</string>
    <string name="item_unselected_acc">Item Not Selected</string>
    <string name="btn_edit">Edit</string>
    <string name="item_more_requests">More Requests&#8230;</string>
    <string name="praying_with_dedication_logo_acc">Praying With Dedication Logo</string>
    <string name="btn_prayer_list_acc">Prayer Lists</string>
    <string name="btn_contact_groups">Contact Groups</string>
    <string name="btn_prayer_requests">Prayer Requests</string>
    <string name="btn_log_out">Logout</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="profile_icon_acc">Profile Icon</string>
    <string name="fab_btn_add_request">Add Prayer Request</string>
    <string name="fab_add_contact">Add New Contact</string>
    <string name="dialog_delete_prayer_request_title">Delete Prayer Request</string>
    <string name="request_add_detail">Add Prayer Request Details</string>
    <string name="btn_date_picker">Open Date Picker Dialog</string>
    <string name="btn_verse_selection">Open verse selection tool</string>
    <string name="click_the_icon_to_add_verses">(Click the Icon to add verses)</string>
    <string name="request_end_date_hint">End Date</string>
    <string name="request_title_hint">Title</string>
    <string name="request_details_hint">Request Details</string>
    <string name="select_contact">Select Contact</string>
    <string name="prayer_request_detail">Add Prayer Request Detail</string>
    <string name="btn_find_acc">Search for Bible Verse</string>
    <string name="select_bible_verse">Select bible passage to add</string>
    <string name="select_prayer_request">Select prayer request</string>
    <string name="dialog_need_to_add_contacts_first">Before you can start adding prayer requests, you need to setup some contacts to associate them with.  Press OK and we\'ll take you there.</string>
    <string name="dialog_need_to_add_contacts_first_title">Welcome! But before you begin...</string>
    <string name="empty_contact_groups">Welcome! It looks like you are just getting started, or starting over.\nTo begin, add a new contact group by selecting the \'Add New Group\' button in the main menu.</string>
    <string name="empty_contacts">This Contact Group needs some contacts. Add them by clicking the floating action button at the bottom.</string>
    <string name="empty_prayer_lists">To get started, add a new prayer list by selecting the \'Add Prayer List\' button in the main menu.</string>
    <string name="empty_prayer_requests">This Prayer List needs some prayer requests. Add them by clicking the floating action button at the bottom.</string>
    <string name="not_yet">You can\'t do that yet. Follow the help on the main screen.</string>
    <string name="email_sent">Email sent.</string>
    <string name="form_error">Please fill in the required fields</string>
</resources>
