<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_list"
        android:enabled="true"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/menu_prayer_list_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_list"
        android:enabled="true"
        android:icon="@drawable/ic_create_24dp"
        android:title="@string/menu_prayer_list_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_list"
        android:enabled="true"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/menu_prayer_list_delete"
        app:showAsAction="ifRoom" />
</menu>