<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_group"
        android:enabled="true"
        android:icon="@drawable/ic_group_add_white_24dp"
        android:title="@string/menu_contact_group_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_group"
        android:enabled="true"
        android:icon="@drawable/ic_create_24dp"
        android:title="@string/menu_contact_group_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_group"
        android:enabled="true"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/menu_contact_group_delete"
        app:showAsAction="ifRoom" />
</menu>