<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_layout_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.copychrist.app.prayer.ui.prayerrequest.PrayerRequestDetailActivity"
    tools:showIn="@layout/activity_prayer_request_detail">

    <LinearLayout
        android:id="@+id/contact_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <ImageView style="@style/Prayer_Request_Contact_Icon"
            android:contentDescription="@string/profile_icon_acc"/>

        <Spinner
            android:id="@+id/spinner_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <ImageView style="@style/Prayer_Request_Request_Icon"
            android:contentDescription="@string/request_add_detail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_request_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/request_title_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_request_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/request_details_hint"
                    android:lines="2"
                    android:maxLength="300"
                    android:scrollbars="vertical" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/btn_calendar"
            style="@style/Prayer_Request_Calendar_Icon"
            android:contentDescription="@string/btn_date_picker"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_end_date_hint" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/btn_bible_passage_finder"
            style="@style/Prayer_Request_Passages_Icon"
            android:contentDescription="@string/btn_verse_selection"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Required_Field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_the_icon_to_add_verses" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:scrollbars="vertical" />
        </FrameLayout>
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:paddingTop="@dimen/activity_horizontal_margin">-->

    <!--<ImageView-->
    <!--android:layout_width="48dp"-->
    <!--android:layout_height="48dp"-->
    <!--android:layout_gravity="center"-->
    <!--android:src="@drawable/ic_storage_24dp"-->
    <!--android:tint="@color/colorAccent" />-->

    <!--<Spinner-->

    <!--android:id="@+id/spinner_prayer_lists"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:autofillHints="Add to Prayer List" />-->
    <!--</LinearLayout>-->
</LinearLayout>
