<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/dialog_horizontal_margin"
    android:paddingStart="@dimen/dialog_horizontal_margin">

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:paddingEnd="8dp"
        android:src="@drawable/ic_account_circle_24dp"
        android:tint="@android:color/darker_gray" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_contact_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_contact_first_name_hint"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_contact_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_contact_last_name_hint"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required_fields"
        android:textColor="@color/colorAccent"
        android:textStyle="italic" />
</LinearLayout>