<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/dialog_horizontal_margin"
    android:paddingStart="@dimen/dialog_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_books"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tooltipText="@string/spinner_books_hint" />

        <Spinner
            android:id="@+id/spinner_chapters"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_verse_reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_search_verse"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_find"
            style="@style/Dialog_Search_Btn"
            android:contentDescription="@string/btn_find_acc"
            android:layout_width="@dimen/dialog_search_btn_width_height"
            android:layout_height="@dimen/dialog_search_btn_width_height" />
    </LinearLayout>

    <TextView
        style="@style/Required_Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        style="@style/Dialog_Search_Text"
        android:id="@+id/txt_search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp" />
</LinearLayout>