<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context="com.copychrist.app.prayer.ui.home.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txt_app_title"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="@dimen/normal_space"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="35dp" />
    <TextView
        android:id="@+id/txt_verse_of_the_day"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/Item_Sub_Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_title"
        android:paddingTop="@dimen/normal_space"
        tools:layout_editor_absoluteX="8dp" />
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_verse_of_the_day"
        android:layout_marginTop="@dimen/large_space"
        android:contentDescription="@string/praying_with_dedication_logo_acc"
        tools:layout_editor_absoluteX="117dp" />

    <RelativeLayout
        android:id="@+id/icon_container_prayer_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/home_icon_width_height_plus"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        tools:layout_editor_absoluteX="130dp">

        <RelativeLayout
            android:id="@+id/icon_back_prayer_lists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <ImageView
                android:layout_width="@dimen/home_icon_width_height_plus"
                android:layout_height="@dimen/home_icon_width_height_plus"
                android:src="@drawable/bg_circle"
                android:tint="@color/indigo_500"
                android:contentDescription="@string/btn_prayer_list_acc"/>

            <ImageView
                android:layout_width="@dimen/home_icon_width_height_plus"
                android:layout_height="@dimen/home_icon_width_height_plus"
                android:layout_centerInParent="true"
                android:padding="16dp"
                android:contentDescription="@string/btn_prayer_list_acc"
                app:srcCompat="@drawable/ic_storage_24dp" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/icon_container_prayer_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/icon_container_prayer_lists"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        android:paddingTop="@dimen/large_space"
        tools:layout_editor_absoluteX="255dp">

        <RelativeLayout
            android:id="@+id/icon_back_prayer_requests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/home_icon_width_height"
                android:layout_height="@dimen/home_icon_width_height"
                android:src="@drawable/bg_circle"
                android:tint="@color/colorAccent"
                android:contentDescription="@string/btn_prayer_requests"/>

            <ImageView
                android:layout_width="@dimen/home_icon_width_height"
                android:layout_height="@dimen/home_icon_width_height"
                android:layout_centerInParent="true"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_question_answer_24dp"
                android:contentDescription="@string/btn_prayer_requests"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/icon_container_contact_groups"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/icon_container_prayer_lists"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        android:paddingTop="@dimen/large_space"
        tools:layout_editor_absoluteX="30dp">

        <RelativeLayout
            android:id="@+id/icon_back_contact_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/home_icon_width_height"
                android:layout_height="@dimen/home_icon_width_height"
                android:src="@drawable/bg_circle"
                android:tint="@color/teal_400"
                android:contentDescription="@string/btn_contact_groups"/>

            <ImageView
                android:layout_width="@dimen/home_icon_width_height"
                android:layout_height="@dimen/home_icon_width_height"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_group_24dp"
                android:contentDescription="@string/btn_contact_groups"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/icon_container_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="137dp">

        <RelativeLayout
            android:id="@+id/icon_back_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/bg_circle"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/login_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_log_out"
                android:layout_marginStart="@dimen/xlarge_space"
                android:layout_marginTop="10dp"
                android:paddingTop="@dimen/small_space"
                android:paddingBottom="@dimen/small_space"
                android:paddingStart="@dimen/normal_space"
                android:paddingEnd="@dimen/small_space"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                />

            <ImageView
                android:layout_width="@dimen/item_icon_width_height"
                android:layout_height="@dimen/item_icon_width_height"
                android:layout_marginEnd="@dimen/xxlarge_space"
                android:src="@drawable/bg_circle"
                android:contentDescription="@string/btn_contact_groups"
                android:tint="@color/colorPrimary" />

            <ImageView
                android:layout_width="@dimen/item_icon_width_height"
                android:layout_height="@dimen/item_icon_width_height"
                android:contentDescription="@string/btn_contact_groups"
                android:padding="4dp"
                android:layout_marginEnd="@dimen/xxlarge_space"
                app:srcCompat="@drawable/ic_settings_24dp" />


        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
